# my-finances

./: .gitignore  docker-compose.yml
daily-extractor/: .env  Dockerfile  main.py  poetry.toml  pyproject.toml
daily-extractor/flows/: transactions_extraction.py
daily-extractor/flows/services/: organizze_service.py
daily-extractor/models/: category.py  transaction.py
daily-extractor/repositories/: transactions.py
daily-extractor/services/: organizze_service.py
finances-api/: go.mod  go.sum
finances-api/cmd/: main.go
finances-api/internal/: server.go
finances-api/internal/handlers/: transactions.go
