[project]
name = "daily-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Neves",email = "43397591+v-venes@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
prefect = "^3.4.7"
pymongo = "^4.13.2"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
